lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:1: error: type mismatch;
 found   : Int(2)
 required: lessons.lander.universe.Point
 var Segment= Array[Point](2)
                           ^